fix: changed ipAddress from hostAddress to X-Forwarded-For header
